...
  });
  const descriptionText = videoDetails.description || 'No description available.';

  return (
    <SafeAreaView
      style={[styles.container, { backgroundColor: theme.colors.pageBackground }]}
      testID="player-screen"
    >
      <AndroidOrientationOverride enabled={isFullscreen} orientation={fullscreenOrientationLock} />
      <View
        style={[styles.playerScreenFrame, { backgroundColor: theme.colors.videoFrameBackground }]}
      >
        <VideoView
...
